# cotipy

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: cotizaciones.py  history.py  router.py
app/core/: cache.py  config.py  database.py
app/models/: db_models.py  schemas.py
app/scrapers/: base.py  bcp.py  cambios_chaco.py  maxicambios.py  utils.py
app/services/: cotizacion_service.py  history_service.py
app/static/: index.html
recursos/: DEPLOY_COOLIFY.md
